Click Changelog
===============

This contains all major version changes between click releases.

Version 2.0
-----------

(codename and release date to be decided)

- added support for opening stdin/stdout on windows in
  binary mode correctly.
- added support for atomic writes to files by going through
  a temporary file.

Version 1.1
-----------

(bugfix release, released on May 23rd 2014)

- fixed a bug that caused text files on Python 2 to not accept
  native strings.

Version 1.0
-----------

(no codename, released on May 21st 2014)

- Initial release.