@@ -108,3 +108,22 @@ def test_nargs_envvar(runner):
                            env={'TEST_ARG': 'x 1 y 2'})
     assert not result.exception
     assert result.output == 'x|1\ny|2\n'
+
+
+def test_custom_validation(runner):
+    def validate_pos_int(ctx, value):
+        if value < 0:
+            raise click.BadParameter('Value needs to be positive')
+        return value
+
+    @click.command()
+    @click.option('--foo', callback=validate_pos_int, default=1)
+    def cmd(foo):
+        click.echo(foo)
+
+    result = runner.invoke(cmd, ['--foo', '-1'])
+    assert 'Invalid value for "--foo": Value needs to be positive' \
+        in result.output
+
+    result = runner.invoke(cmd, ['--foo', '42'])
+    assert result.output == '42\n'
