@@ -12,6 +12,8 @@ Version 2.0
   binary mode correctly.
 - added support for atomic writes to files by going through
   a temporary file.
+- introduced :exc:`BadParameter` which can be used to easily perform
+  custom validation with the same error messages as in the type system.
 
 Version 1.1
 -----------
